# retineuron

./: .gitignore  README.MD  pyproject.toml  try_run_and_polt.ipynb
retineuron/: __init__.py  cell.py  electric.py  plot.py  simulation.py
retineuron/DataAnalysis/: 2dgaussian.py  Preprocessing_GroupCell.py  Preprocessing_GroupTime.py  plot_data.py  regression_plot.py
