[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "retineuron"
version = "0.0.1"
description = "NEURON modeling of retinal cells to extracellular stimulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "neuron",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.10",
  "build>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["retineuron"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"